--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,8 @@
         "psr-4": {
             "BasicApp\\Site\\" : ""
         }
+    },
+    "require": {
+        "basic-app/system": "*"
     }
 }
